<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/question_1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">
            <RadioButton
                android:id="@+id/apple_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apple"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/honey_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/honey"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/cinnamon_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinnamon"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/question_2" />

        <EditText
            android:id="@+id/year_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/year_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/question_3" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">
            <RadioButton
                android:id="@+id/anthony_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anthony_alvarez"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/richard_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/richard_smith"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/jacob_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jacob_fussell"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/question_4" />

        <CheckBox
            android:id="@+id/edys_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edys"
            android:textAppearance="?android:textAppearanceMedium" />
        <CheckBox
            android:id="@+id/dairy_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dairy_prince"
            android:textAppearance="?android:textAppearanceMedium" />
        <CheckBox
            android:id="@+id/breyers_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breyers"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/question_5" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">
            <RadioButton
                android:id="@+id/vanilla_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vanilla"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/peach_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peach"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/banana_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banana"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitAnswers"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>

